# Syscall-Debugger

./: .gitignore  CMakeLists.txt  MYSELF  MYSELF.txt  README.md  Syscall-debug.pro  TODO  UI_debugWindow.cpp  a.out  actiontriggers.cpp  actiontriggers.h  debugwindow.cpp  debugwindow.cpp.autosave  debugwindow.h  main.cpp  process.cpp  subprocesses.txt  utils.cpp  utils.h
creatorDialog/: dialog.cpp  dialog.h
debugWindow/: window.cpp  window.h
final/: SD_otracer  SyscallDebugger  Syscall_Debugger  Test  config  config_tracer  config_win  subproc  subproc2  threaded
headers/: ProcessModel.h  UI_debugWindow.h  configFile.h  configUtils.h  customqcompleter.h  debugwindow.h  parameters.h  process.h  syscall.h  utils.h
headers/UIs/: UI_debugWindow.h  UI_processSelector.h  debugWindow.h  processSelector.h
others/: debugger.ui  dialog_sproc.ui  popup_sproc.ui
res/: ressources.qrc
src/: ProcessModel.cpp  configFile.cpp  customqcompleter.cpp  debugwindow.cpp  main.cpp  mainProcess.cpp  process.cpp  syscall.cpp  tracer.cpp  tracerUtils.cpp  utils.cpp  windowActions.cpp
src/UIs/: debugWindow.cpp  processSelector.cpp
targets/common/headers/: baseTracer.h  plateform.h  process.h  realTracer.h  regs.h  syscall.h  syscall_structs.h  tcpTracer.h  tracer.h  tracerCore.h  tracerUtils.h  utils.h
targets/common/headers/config/: config.h  tracerConfig.h
targets/common/headers/connect/: tracerConnect.h  uiConnect.h
targets/common/headers/connects/: tracerConnect.h  uiConnect.h
targets/common/src/: baseTracer.cpp  configFile.cpp  process.cpp  realTracer.cpp  realTracerUtils.cpp  syscall.cpp  syscall_structs.cpp  tracer.cpp  tracerCore.cpp  tracerUtils.cpp  utils.cpp  windowActions.cpp
targets/common/src/config/: config.cpp  tracerConfig.cpp
targets/common/src/plateform/: linux.cpp
targets/otracer/headers/: process.h  tcpTracer.h  tcpUIConnect.h
targets/otracer/headers/connect/: tcpUIConnect.h
targets/otracer/src/: localTracer.cpp  main.cpp  process.cpp  tcpTracer.cpp  tcpUIConnect.cpp
targets/otracer/src/connect/: tcpUIConnect.cpp
targets/ui/headers/: UI_debugWindow.h  UI_processSelector.h  debugWindow.h  localTracer.h  processSelector.h
targets/ui/src/: debugWindow.cpp  processSelector.cpp
targets/win/headers/: configFile.h  configUtils.h  debugWindow.h  localTracer.h  process.h  processSelector.h  syscall.h  tcpTracerConnect.h  uiTcpTracer.h  uiTracer.h
targets/win/headers/config/: winConfig.h
targets/win/headers/connect/: tcpTracerConnect.h
targets/win/headers/qt/: UI_debugWindow.h
targets/win/headers/ui/: debugWindow.h  processSelector.h
targets/win/res/: ressources.qrc
targets/win/src/: configFile.cpp  debugWindow.cpp  localTracer.cpp  localTracerUtils.cpp  main.cpp  process.cpp  processSelector.cpp  syscall.cpp  tcpTracer.cpp  tcpTracerConnect.cpp  uiTcpTracer.cpp  uiTracer.cpp  windowActions.cpp
targets/win/src/config/: winConfig.cpp
targets/win/src/connect/: tcpTracerConnect.cpp
(+10 files in other folders)
